"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-08-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85:
	  vpi-prsim: fixed uncaught channel exception causing VCS to 
		crash, wrapped call to __advance_prsim in a catch-all
		__advance_prsim_nothrow that calls vpi_finish().
	  Was not able to reproduce with small targeted test case, 
		but original test case works, and fix was somewhat obvious.


	* HACKT-00-01-04-main-00-84-84-merged-prsim-keeper-check-11:
	  Merged prsim-keeper-check branch.


2011-08-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-11:
	  hacprsim: keeper-check now allows 1 transition of delay
		on side-paths driving feedback, in case an opposite
		sense of a signal is used in conditional feedback.
		Added test case: preset-delay-a(-01).
	  rebase master (-main-00-84-83)


	* HACKT-00-01-04-main-00-84-83:
	  hacprsim, hacchpsim: added 'precision' command to control
		output precision of real-numbers to stdout.
		Added 1 test case.  Documented.


2011-07-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-10:
	  vpi-prsim now able to process command-line arguments
		with $prsim_options("...") VPI function call.
	  prsim_options class pulled out into main/prsim_options.h
	  const-ified argv argument for prsim::parse_command_options.
	  Test case added.


	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-09:
	  hacprsim: splitting most of prsim program class into
		separate module, so that vpi-prsim can potentially
		call prsim::parse_command_options() for
		pasing command-options to (before) $prsim().


2011-07-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-08:
	  hacprsim: mode-fatal no longer enables keeper-checks 